# pyfix-agent

./: README.md  benchmark.py  benchmark_results.csv  pyfix_agent.py  pyproject.toml  script.py  script_fixed.py
eval_dataset/AttributeError/: patched_script1.py  patched_script2.py  patched_script3.py  script1.py  script2.py  script3.py  test_script1.py  test_script2.py  test_script3.py
eval_dataset/IndexError/: patched_script1.py  patched_script2.py  patched_script3.py  script1.py  script2.py  script3.py  test_script1.py  test_script2.py  test_script3.py
eval_dataset/LogicBugs/: patched_script2.py  patched_script3.py  script1.py  script2.py  script3.py  test_script1.py  test_script2.py  test_script3.py
eval_dataset/NameError/: patched_script1.py  patched_script2.py  patched_script3.py  script1.py  script2.py  script3.py  test_script1.py  test_script2.py  test_script3.py
eval_dataset/TypeError/: patched_script1.py  patched_script2.py  patched_script3.py  script1.py  script2.py  script3.py  test_script1.py  test_script2.py  test_script3.py
